--- a/Li_DL/HW_4/hw4_w2v.ipynb
+++ b/Li_DL/HW_4/hw4_w2v.ipynb
@@ -181,6 +181,7 @@
     "    def forward(self, x):\n",
     "        batch_size = x.shape[0]\n",
     "        tokens = self.embed(torch.tensor(x))\n",
+    "        print(type(tokens))\n",
     "        _,(ht,_) = self.LSTM(tokens)\n",
     "        out = self.fc(ht)\n",
     "        return out.reshape(batch_size,2)"
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,113 +269,35 @@
     "    data_pro = data_processing(embed_dim = embed_dim, seq_len = max_seq_len)\n",
     "    data_pro.train_word2vec(data)\n",
     "    embedding = data_pro.build_embedding_matrix()\n",
-    "    print('Embedding matrix build successfully.')\n",
+    "    print(embedding)\n",
+    "    # print('Embedding matrix build successfully.')\n",
     "\n",
-    "    train_X, val_X, train_y, val_y = train_test_split(train_label_data, train_label, train_size = 0.8)\n",
-    "    train_set = TextDataset(data_pro, train_X, train_y)\n",
-    "    valid_set = TextDataset(data_pro, val_X, val_y)\n",
-    "    train_loader = DataLoader(train_set, batch_size = batch_size, shuffle = True)\n",
-    "    valid_loader = DataLoader(valid_set, batch_size = batch_size, shuffle = True)\n",
-    "    print('Data Loader build successfully.')\n",
+    "    # train_X, val_X, train_y, val_y = train_test_split(train_label_data, train_label, train_size = 0.8)\n",
+    "    # train_set = TextDataset(data_pro, train_X, train_y)\n",
+    "    # valid_set = TextDataset(data_pro, val_X, val_y)\n",
+    "    # train_loader = DataLoader(train_set, batch_size = batch_size, shuffle = True)\n",
+    "    # valid_loader = DataLoader(valid_set, batch_size = batch_size, shuffle = True)\n",
+    "    # print('Data Loader build successfully.')\n",
     "\n",
-    "    model = RNN(embedding).to(device)\n",
-    "    print('RNN model initialize successfully.')\n",
+    "    # model = RNN(embedding).to(device)\n",
+    "    # print('RNN model initialize successfully.')\n",
     "    \n",
-    "    train(model, train_loader, valid_loader, batch_size, epoch_num, lr, device)"
+    "    # train(model, train_loader, valid_loader, batch_size, epoch_num, lr, device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data load successfully.\n",
-      "Super parameters set successfully, device is cpu.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Juyi/anaconda3/envs/deeplearing/lib/python3.6/site-packages/ipykernel_launcher.py:33: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embedding matrix build successfully.\n",
-      "Data Loader build successfully.\n",
-      "RNN model initialize successfully.\n",
-      "Begin to train.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Juyi/anaconda3/envs/deeplearing/lib/python3.6/site-packages/ipykernel_launcher.py:25: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch[01|10] | Train loss is : 0.02163 | Train acc is : 0.513 | Valid loss is : 0.68928 | Valid acc is : 0.532 \n",
-      "***** The best accuracy in validation set is 0.532\n",
-      "Epoch[02|10] | Train loss is : 0.01997 | Train acc is : 0.639 | Valid loss is : 0.60088 | Valid acc is : 0.700 \n",
-      "***** The best accuracy in validation set is 0.700\n",
-      "Epoch[03|10] | Train loss is : 0.01803 | Train acc is : 0.730 | Valid loss is : 0.55895 | Valid acc is : 0.751 \n",
-      "***** The best accuracy in validation set is 0.751\n",
-      "Epoch[04|10] | Train loss is : 0.01722 | Train acc is : 0.756 | Valid loss is : 0.54051 | Valid acc is : 0.763 \n",
-      "***** The best accuracy in validation set is 0.763\n",
-      "Epoch[05|10] | Train loss is : 0.01671 | Train acc is : 0.768 | Valid loss is : 0.52972 | Valid acc is : 0.773 \n",
-      "***** The best accuracy in validation set is 0.773\n",
-      "Epoch[06|10] | Train loss is : 0.01640 | Train acc is : 0.778 | Valid loss is : 0.52292 | Valid acc is : 0.779 \n",
-      "***** The best accuracy in validation set is 0.779\n",
-      "Epoch[07|10] | Train loss is : 0.01621 | Train acc is : 0.783 | Valid loss is : 0.51933 | Valid acc is : 0.782 \n",
-      "***** The best accuracy in validation set is 0.782\n",
-      "Epoch[08|10] | Train loss is : 0.01613 | Train acc is : 0.786 | Valid loss is : 0.51756 | Valid acc is : 0.785 \n",
-      "***** The best accuracy in validation set is 0.785\n",
-      "Epoch[09|10] | Train loss is : 0.01604 | Train acc is : 0.789 | Valid loss is : 0.51557 | Valid acc is : 0.787 \n",
-      "***** The best accuracy in validation set is 0.787\n",
-      "Epoch[10|10] | Train loss is : 0.01598 | Train acc is : 0.792 | Valid loss is : 0.51304 | Valid acc is : 0.789 \n",
-      "***** The best accuracy in validation set is 0.789\n"
-     ]
+     "text": "Data load successfully.\nSuper parameters set successfully, device is cpu.\n/Users/Juyi/anaconda3/envs/deeplearing/lib/python3.6/site-packages/ipykernel_launcher.py:33: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\ntensor([[-3.2577,  0.9882, -2.5054,  ..., -0.9881,  1.0158, -2.5717],\n        [-1.9657, -1.5850, -0.6337,  ...,  0.0377, -2.2824, -2.6920],\n        [ 0.7972,  1.2969,  0.0850,  ...,  1.8089, -0.6797, -0.7757],\n        ...,\n        [-0.1128, -0.1699, -0.0894,  ..., -0.1224,  0.1921,  0.1166],\n        [ 0.2604,  0.2404,  0.2042,  ...,  0.4058,  0.1362,  0.9711],\n        [ 0.0974,  0.1697,  0.3347,  ...,  0.9536,  0.2994,  0.3974]])\n"
     }
    ],
    "source": [
     "biu()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Epoch[01|10] | Train loss is : 0.02145 | Train acc is : 0.549 | Valid loss is : 0.66974 | Valid acc is : 0.601 \n",
-    "***** The best accuracy in validation set is 0.601\n",
-    "Epoch[02|10] | Train loss is : 0.01922 | Train acc is : 0.676 | Valid loss is : 0.58231 | Valid acc is : 0.716 \n",
-    "***** The best accuracy in validation set is 0.716\n",
-    "Epoch[03|10] | Train loss is : 0.01802 | Train acc is : 0.728 | Valid loss is : 0.56958 | Valid acc is : 0.739 \n",
-    "***** The best accuracy in validation set is 0.739\n",
-    "Epoch[04|10] | Train loss is : 0.01778 | Train acc is : 0.740 | Valid loss is : 0.56905 | Valid acc is : 0.740 \n",
-    "***** The best accuracy in validation set is 0.740\n",
-    "Epoch[05|10] | Train loss is : 0.01750 | Train acc is : 0.749 | Valid loss is : 0.55735 | Valid acc is : 0.751 \n",
-    "***** The best accuracy in validation set is 0.751\n",
-    "Epoch[06|10] | Train loss is : 0.01740 | Train acc is : 0.751 | Valid loss is : 0.55570 | Valid acc is : 0.753 \n",
-    "***** The best accuracy in validation set is 0.753\n",
-    "Epoch[07|10] | Train loss is : 0.01726 | Train acc is : 0.756 | Valid loss is : 0.55236 | Valid acc is : 0.756 \n",
-    "***** The best accuracy in validation set is 0.756\n",
-    "Epoch[08|10] | Train loss is : 0.01714 | Train acc is : 0.760 | Valid loss is : 0.55184 | Valid acc is : 0.757 \n",
-    "***** The best accuracy in validation set is 0.757\n",
-    "Epoch[09|10] | Train loss is : 0.01704 | Train acc is : 0.762 | Valid loss is : 0.54674 | Valid acc is : 0.760 \n",
-    "***** The best accuracy in validation set is 0.760\n",
-    "Epoch[10|10] | Train loss is : 0.01692 | Train acc is : 0.764 | Valid loss is : 0.54165 | Valid acc is : 0.762 \n",
-    "***** The best accuracy in validation set is 0.762"
    ]
   }
  ],
@@ -394,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.9-final"
   }
  },
  "nbformat": 4,
