--- a/Li_DL/HW_8/HW8.ipynb
+++ b/Li_DL/HW_8/HW8.ipynb
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 442
         },
-        "outputId": "d12d48ca-6120-4352-cc57-0afa1ed30be9"
+        "outputId": "1828057a-1730-4a96-8e3f-ef56409fc927"
       },
       "source": [
         "!gdown --id '1r4px0i-NcrnXy1-tkBsIwvYwbWnxAhcg' --output data.tar.gz\n",
@@ -71,7 +71,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1r4px0i-NcrnXy1-tkBsIwvYwbWnxAhcg\n",
             "To: /content/data.tar.gz\n",
-            "5.83MB [00:00, 18.5MB/s]\n",
+            "\r0.00B [00:00, ?B/s]\r4.72MB [00:00, 38.2MB/s]\r5.83MB [00:00, 35.4MB/s]\n",
             "cmn-eng/\n",
             "cmn-eng/int2word_cn.json\n",
             "cmn-eng/int2word_en.json\n",
@@ -426,8 +426,10 @@
         "    def __init__(self, embed_matrix, layers = 1, hidden_dim = 128):\n",
         "        super(Encoder, self).__init__()\n",
         "        self.embed_dim = embed_matrix.shape[1]\n",
-        "        self.embed = nn.Embedding.from_pretrained(embed_matrix)\n",
+        "        # self.embed = nn.Embedding.from_pretrained(embed_matrix)\n",
+        "        self.embed = nn.Embedding(embed_matrix.shape[0], embed_matrix.shape[1])\n",
         "        self.rnn = Dynamic_RNN(self.embed_dim, hidden_dim, Type = 'GRU',num_layers = layers, bidirectional = True)\n",
+        "        # self.rnn = nn.LSTM(self.embed_dim, hidden_dim, num_layers = layers, bidirectional = True)\n",
         "\n",
         "    def forward(self, inputs):\n",
         "        inputs_len = torch.tensor(torch.sum(inputs != 0,dim = -1),dtype = torch.float)\n",
@@ -505,7 +507,8 @@
         "        self.embed_dim = embed_matrix.shape[1]\n",
         "        self.out_dim = embed_matrix.shape[0]\n",
         "        self.hid_dim = hidden_dim * 2\n",
-        "        self.embedding = nn.Embedding.from_pretrained(embed_matrix)\n",
+        "        # self.embedding = nn.Embedding.from_pretrained(embed_matrix)\n",
+        "        self.embedding = nn.Embedding(embed_matrix.shape[0], embed_matrix.shape[1])\n",
         "        self.attn = attention\n",
         "        self.RNN = nn.GRU(self.embed_dim, self.hid_dim, num_layers = layers, dropout = 0.5 ,batch_first = True, bidirectional = False)\n",
         "        self.dense = nn.Sequential(\n",
@@ -547,11 +550,11 @@
         "colab": {}
       },
       "source": [
-        "def scheudle_sampling(Type,rate = 0.7):\n",
+        "def scheudle_sampling(Type,rate = 0.5):\n",
         "    if Type == 'train':\n",
         "        return 0.5\n",
         "    else:\n",
-        "        return 0"
+        "        return -1"
       ],
       "execution_count": 11,
       "outputs": []
@@ -859,12 +862,12 @@
         "        self.batch_size = 64\n",
         "        self.embed_dim = 256\n",
         "        self.hidden_dim = 512\n",
-        "        self.num_layers = 2\n",
+        "        self.num_layers = 3\n",
         "        self.dropout = 0.5\n",
-        "        self.learning_rate = 1e-4\n",
+        "        self.learning_rate = 5e-5\n",
         "        self.weight_decay = 0\n",
-        "        self.epoch_num = 30\n",
-        "        self.max_len = 8\n",
+        "        self.epoch_num = 40\n",
+        "        self.max_len = 16\n",
         "        self.load_model = False\n",
         "        self.load_model_path = ''\n",
         "        self.store_model_path = \"./ckpt\"      \n",
@@ -905,7 +908,7 @@
       "source": [
         "def train(model, optimizer, train_iter, loss_func, device):\n",
         "    model.train()\n",
-        "    model.zero_grad()\n",
+        "    # model.zero_grad()\n",
         "    losses = 0.0\n",
         "\n",
         "    for idx,data in enumerate(train_iter):\n",
@@ -1073,7 +1076,8 @@
         "def main():\n",
         "    config = Config()\n",
         "    model,criterion = train_process(config)\n",
-        "    test_loss, bleu_socre = test_process(config, model, criterion)"
+        "    test_loss, bleu_socre = test_process(config, model, criterion)\n",
+        "    print('val bleu ',bleu_socre)"
       ],
       "execution_count": 24,
       "outputs": []
@@ -1087,7 +1091,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "234711bd-efd2-4871-d26d-5521e76f6c04"
+        "outputId": "7761b675-4ee9-4b5e-c497-b5c1c1639462"
       },
       "source": [
         "main()"
@@ -1102,7 +1106,7 @@
             "  (encoder): Encoder(\n",
             "    (embed): Embedding(3922, 256)\n",
             "    (rnn): Dynamic_RNN(\n",
-            "      (RNN): GRU(256, 512, num_layers=2, batch_first=True, bidirectional=True)\n",
+            "      (RNN): GRU(256, 512, num_layers=3, batch_first=True, bidirectional=True)\n",
             "    )\n",
             "  )\n",
             "  (decoder): Decoder(\n",
@@ -1110,9 +1114,9 @@
             "    (attn): Attention(\n",
             "      (softmax): Softmax(dim=2)\n",
             "      (dense1): Linear(in_features=2048, out_features=1024, bias=False)\n",
-            "      (dense2): Linear(in_features=2048, out_features=1024, bias=True)\n",
+            "      (dense2): Linear(in_features=3072, out_features=1024, bias=True)\n",
             "    )\n",
-            "    (RNN): GRU(256, 1024, num_layers=2, batch_first=True, dropout=0.5)\n",
+            "    (RNN): GRU(256, 1024, num_layers=3, batch_first=True, dropout=0.5)\n",
             "    (dense): Sequential(\n",
             "      (0): Dropout(p=0.5, inplace=False)\n",
             "      (1): Linear(in_features=2048, out_features=4096, bias=True)\n",
@@ -1128,40 +1132,51 @@
             "    amsgrad: False\n",
             "    betas: (0.9, 0.999)\n",
             "    eps: 1e-08\n",
-            "    lr: 0.0001\n",
+            "    lr: 5e-05\n",
             "    weight_decay: 0\n",
             ")\n",
             "------------------ Train Epoch -----------------\n",
-            "Epoch num is 1, Best val loss is 4.4971736669540405, Best Bleu socre is 0.16819334202320937\n",
-            "Epoch num is 2, Best val loss is 4.371340811252594, Best Bleu socre is 0.19065843792266438\n",
-            "Epoch num is 3, Best val loss is 4.339071750640869, Best Bleu socre is 0.19555932090447878\n",
-            "Epoch num is 4, Bleu score is 0.17536809717534563\n",
-            "Epoch num is 5, Best val loss is 4.1941787004470825, Best Bleu socre is 0.197390337598423\n",
-            "Epoch num is 6, Bleu score is 0.21022650336112236\n",
-            "Epoch num is 7, Bleu score is 0.200993174337826\n",
-            "Epoch num is 8, Best val loss is 4.142712384462357, Best Bleu socre is 0.21502867418212562\n",
-            "Epoch num is 9, Best val loss is 4.132732510566711, Best Bleu socre is 0.2200040908962239\n",
-            "Epoch num is 10, Bleu score is 0.21765466842435954\n",
-            "Epoch num is 11, Best val loss is 4.091774493455887, Best Bleu socre is 0.22046896263756252\n",
-            "Epoch num is 12, Best val loss is 4.038681298494339, Best Bleu socre is 0.22873516119484172\n",
-            "Epoch num is 13, Bleu score is 0.2106946642396752\n",
-            "Epoch num is 14, Bleu score is 0.22538497144360048\n",
-            "Epoch num is 15, Best val loss is 3.9794870913028717, Best Bleu socre is 0.2360768303828876\n",
-            "Epoch num is 16, Best val loss is 3.8924620747566223, Best Bleu socre is 0.24035240717576178\n",
-            "Epoch num is 17, Bleu score is 0.2366543857061582\n",
-            "Epoch num is 18, Bleu score is 0.22784658577290476\n",
-            "Epoch num is 19, Bleu score is 0.2489743154379725\n",
-            "Epoch num is 20, Best val loss is 3.8889726102352142, Best Bleu socre is 0.24823809037242722\n",
-            "Epoch num is 21, Bleu score is 0.23826970238499792\n",
-            "Epoch num is 22, Bleu score is 0.2467213502345725\n",
-            "Epoch num is 23, Bleu score is 0.23356673852960738\n",
-            "Epoch num is 24, Bleu score is 0.2454369486614081\n",
-            "Epoch num is 25, Bleu score is 0.24458625328532296\n",
-            "Epoch num is 26, Best val loss is 3.8421136140823364, Best Bleu socre is 0.2526305216495545\n",
-            "Epoch num is 27, Bleu score is 0.25058300580163484\n",
-            "Epoch num is 28, Bleu score is 0.24625038988990552\n",
-            "Epoch num is 29, Best val loss is 3.7481441497802734, Best Bleu socre is 0.2536200154971274\n",
-            "Epoch num is 30, Bleu score is 0.24330430576504308\n"
+            "Epoch num is 1, Best val loss is 2.688581019639969, Best Bleu socre is 0.20029170871796934\n",
+            "Epoch num is 2, Bleu score is 0.2231211092489047\n",
+            "Epoch num is 3, Best val loss is 2.4497548937797546, Best Bleu socre is 0.24417434806427613\n",
+            "Epoch num is 4, Best val loss is 2.4115444719791412, Best Bleu socre is 0.26008331239201926\n",
+            "Epoch num is 5, Best val loss is 2.3817493319511414, Best Bleu socre is 0.2630062522283931\n",
+            "Epoch num is 6, Best val loss is 2.324291378259659, Best Bleu socre is 0.2651226556039421\n",
+            "Epoch num is 7, Best val loss is 2.272228926420212, Best Bleu socre is 0.2739981894568303\n",
+            "Epoch num is 8, Best val loss is 2.1832234114408493, Best Bleu socre is 0.2906261933083618\n",
+            "Epoch num is 9, Bleu score is 0.28503825107822467\n",
+            "Epoch num is 10, Bleu score is 0.28832780515173206\n",
+            "Epoch num is 11, Bleu score is 0.28348270755142346\n",
+            "Epoch num is 12, Best val loss is 2.0425251871347427, Best Bleu socre is 0.2959412990151629\n",
+            "Epoch num is 13, Bleu score is 0.2956296931285758\n",
+            "Epoch num is 14, Bleu score is 0.2896738920146494\n",
+            "Epoch num is 15, Bleu score is 0.283947661023402\n",
+            "Epoch num is 16, Bleu score is 0.2948039824171533\n",
+            "Epoch num is 17, Best val loss is 1.9870655685663223, Best Bleu socre is 0.3034352408150158\n",
+            "Epoch num is 18, Bleu score is 0.29017144680056706\n",
+            "Epoch num is 19, Bleu score is 0.2933837853955225\n",
+            "Epoch num is 20, Bleu score is 0.29540690738781133\n",
+            "Epoch num is 21, Best val loss is 1.9426892399787903, Best Bleu socre is 0.3110128986711343\n",
+            "Epoch num is 22, Bleu score is 0.3107304503257853\n",
+            "Epoch num is 23, Bleu score is 0.30105290983612604\n",
+            "Epoch num is 24, Bleu score is 0.3054184105796553\n",
+            "Epoch num is 25, Bleu score is 0.2975155374883355\n",
+            "Epoch num is 26, Bleu score is 0.3087768386718369\n",
+            "Epoch num is 27, Bleu score is 0.31430143809429595\n",
+            "Epoch num is 28, Bleu score is 0.3092091523999643\n",
+            "Epoch num is 29, Bleu score is 0.31111057694901284\n",
+            "Epoch num is 30, Bleu score is 0.3133142201386341\n",
+            "Epoch num is 31, Bleu score is 0.30829726462319085\n",
+            "Epoch num is 32, Bleu score is 0.31449689877408243\n",
+            "Epoch num is 33, Bleu score is 0.3011229425766387\n",
+            "Epoch num is 34, Bleu score is 0.3099730101986723\n",
+            "Epoch num is 35, Bleu score is 0.31856204728479887\n",
+            "Epoch num is 36, Bleu score is 0.32284389359875904\n",
+            "Epoch num is 37, Bleu score is 0.3230023356637745\n",
+            "Epoch num is 38, Bleu score is 0.31591816671134937\n",
+            "Epoch num is 39, Bleu score is 0.3062824511034315\n",
+            "Epoch num is 40, Bleu score is 0.3183021787133413\n",
+            "val bleu  0.3111666071471068\n"
           ],
           "name": "stdout"
         }
